styles-css/education.css
.education-layout{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
}

.education-school{
    grid-row: 1 / 1;
    grid-column: 1 / 1;
    border: 1px solid none;
}

.education-certification{
    grid-row: 1 / 1;
    grid-column: 2 / 2;
    border: 1px solid none;
}

.education-space{
    display: grid;
    grid-gap: 5px;
    grid-auto-rows: 75vh;
    overflow: auto;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* Internet Explorer and Edge */
    align-items: center;
    border: 1px solid none;
}

.education-space::-webkit-scrollbar {
    display: none;
}

.degree-space{
    height: 400px;
    padding-top: 1px;
    border: 1px solid none;
}

.cert-space{
    display: grid;
    grid-gap: 5px;
    grid-auto-rows: 75vh;
    width: 45vw;
    overflow: auto;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* Internet Explorer and Edge */
    border: 1px solid none;
}

.cert-space::-webkit-scrollbar {
    display: none;
}

.cert-content .cert-section{
    margin-bottom: 10px;
    border: 1px solid none;
}

.cert-title{
    color: rgb(193, 224, 225);
    font-size: 20px;
    display: block;
    width: 42vw;
    text-align: center;
    padding-top: 10px;
    padding-bottom: 5px;
    border: 1px solid none;
}

.track-container{
    margin-top: 10px;
    transform: rotateX(180deg);
    height: 350px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: #eee;
    overflow-y: hidden;
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* Internet Explorer and Edge */
    border: 1px solid none;
}

.cert-card-space{
    transform: rotateX(180deg);
    position: fixed;
    left: 1px;
    border: 1px solid none;
}

/* Track */
.track-container::-webkit-scrollbar-track {
    background: rgb(155, 174, 209);
    border-radius: 5px;
}

/* Handle */
.track-container::-webkit-scrollbar-thumb {
    background: linear-gradient(45deg, #3e5170 20%, rgba(55, 125, 255, 0.688) 100%, #3e5170 20%);
    border-radius: 5px;
}

.track-container::-webkit-scrollbar {
    height: 6px;
    border-radius: 25%;
    background-color: rgb(155, 174, 209);
}

/*
---------------------------------------------------------------------------------------------------
*/

.one-card-edu{
    background-color: #515a6a;
    background: linear-gradient(0deg, rgb(78, 86, 101) 0%, rgba(55, 0, 103, 0.5) 100%);
    box-shadow: 0 7px 20px 5px #24242488;
    border-radius: .7rem;
    backdrop-filter: blur(7px);
    -webkit-backdrop-filter: blur(7px);
    transition: .5s all;
    width: 175px;
    height: 150px;
    border: 1px solid none;

    ::before{
        position: fixed;
        content: "";
        top: -10%;
        transform: rotate(-45deg);
        height: 60rem;
        transition: .7s all;
      }
      &:hover{
        transform: scale(1.05);
        filter: brightness(1.1);
        ::before{
          filter: brightness(.5);
          top: -100%;
        }
      }
}

.main-card-body-edu{
    display: flex;
    flex-direction: column;
    width: 150px;
    height: 250px;
    padding: 1rem;
    border: 1px solid none;
}

.edu-list{
    list-style: none;
    display: flex;
    flex-direction: row;
    gap: 90px;
}

.item-edu{
    flex: 1 0 20%;
    height: 100%;
    object-fit: cover;
    transition: all 0.6s ease-in-out;
    border: 1px solid none;
}

.item-deg{
    display: flex;
    height: 100%;
    object-fit: cover;
    transition: all 0.6s ease-in-out;
    border: 1px solid none;
}

.one-card-deg{
    margin-top: 2vh;
    margin-left: 10vw;
    padding-top: 10px;
    padding-left: 10px;
    background-color: #515a6a;
    background: linear-gradient(0deg, rgb(78, 86, 101) 0%, rgba(55, 0, 103, 0.5) 100%);
    box-shadow: 0 7px 20px 5px #24242488;
    border-radius: .7rem;
    backdrop-filter: blur(7px);
    -webkit-backdrop-filter: blur(7px);
    transition: .5s all;
    width: 450px;
    height: 300px;
    border: 1px solid none;

    ::before{
        position: fixed;
        content: "";
        top: -10%;
        transform: rotate(-45deg);
        height: 60rem;
        transition: .7s all;
      }
      &:hover{
        transform: scale(1.05);
        filter: brightness(1.1);
        ::before{
          filter: brightness(.5);
          top: -100%;
        }
      }
}

.main-card-body-deg{
    display: flex;
    flex-direction: column;
    width: 150px;
    height: 250px;
    padding: 1rem;
    border: 1px solid none;
}

.project-image-deg{
    border-radius: .5rem;
    width: 100%;
    object-fit: cover;
    height: 250px;
}

.deg-card-content{
    flex-grow: 1;
}

